# FreeRTOS-Cora7z

./: .gitignore  CMakeLists.txt  Makefile  README.md  arm-none-eabi.cmake
FreeRTOS-Kernel/: Makefile
FreeRTOS-Kernel/portable/GCC/ARM_CA9/: Makefile
FreeRTOS-Kernel/portable/MemMang/: Makefile
app/: CMakeLists.txt  main.c
xilinx_bsp/: CMakeLists.txt
xilinx_bsp/scugic_v4_1/src/: Makefile
xilinx_bsp/scutimer_v2_1/src/: Makefile
xilinx_bsp/uartps_v3_8/src/: CMakeLists.txt  Makefile
